Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83263

Rendering of multiple framebuffers object leads to degraded render performance with Wayland

XMLWordPrintable

    • Linux/Wayland
    • 98aea22d839000a377d0fc646133f76e08b44f6e (qt/qtwayland/dev) 2a77384a4f2485364cefeb825eea63daf13dd3b1 (qt/qtwayland/5.15)

      Rendering of multiple instances of a framebuffer object leads to degraded render performance on Wayland platform. The similar effect does not happen on other QPA's like xcb or eglfs.

      Steps to reproduce:

      1. Run the compositor in attached example project qmlscene compositor.qml
      2. Execute the application with Wayland  ./qquickviewcomparison -platform wayland

      Expected result:

      1. The animation runs smoothly on three framebuffer object.

      Actual result:

      1. The animation performance is heavily impaired and frame rate goes down to 5-8FPS.

        1. qtbug_83263.zip
          24 kB
          Tuomas Vaarala
        2. 2020-04-07_FBO-rendering-logs_Compositor-Application.zip
          401 kB
          Tuomas Vaarala
        3. qquickviewcomparison.tar.gz
          9 kB
          Paul Olav Tvete
        4. Flick.qml
          0.5 kB
          Andreas Cord-Landwehr
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes